# Unfolding-uncertainty

./: .gitignore  README.md  pyproject.toml
docs/: Makefile  analysis_note.tex
notebooks/: demo_unfolding.ipynb
src/unfolding/: __init__.py  linalg.py  response.py  tikhonov.py  toys.py  tsvd.py  tuning.py
tests/: test_shapes.py  test_tuning.py
